重构2：警告处理